// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical persian/afghanistan IDX page A11y I can see the skip to content link 1`] = `"مشاهده محتوا"`;

exports[`Canonical persian/afghanistan IDX page Analytics ATI 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" src="https://logws1363.ati-host.net?s=598343&amp;s2=69&amp;p=persian.afghanistan.page&amp;x1=[urn%3Abbc%3Acps%3A3cda1d8c-ffa2-03ae-e050-380a4e8056f3]&amp;x2=[responsive]&amp;x3=[news-persian]&amp;x4=[fa]&amp;x7=[index-section]&amp;x8=[simorgh-nojs]&amp;x9=[%D8%B5%D9%81%D8%AD%D9%87%2520%D8%A7%D9%81%D8%BA%D8%A7%D9%86%D8%B3%D8%AA%D8%A7%D9%86%2520-%2520BBC%2520News%2520%D9%81%D8%A7%D8%B1%D8%B3%DB%8C]&amp;x11=[2016-09-20T16%3A06%3A44.000Z]&amp;x12=[2023-07-24T07%3A12%3A08.000Z]"/>"`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, فارسی",
  "url": "/persian",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 2`] = `
{
  "text": "چرا می‌توانید به بی‌بی‌سی اطمینان کنید؟",
  "url": "https://www.bbc.com/persian/institutional-49283091",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 3`] = `
{
  "text": "شرایط استفاده",
  "url": "https://www.bbc.com/persian/institutional-37474133",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 4`] = `
{
  "text": "درباره بی بی سی",
  "url": "https://www.bbc.com/persian/institutional-37474136",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 5`] = `
{
  "text": "سیاست حفظ حریم خصوصی",
  "url": "https://www.bbc.com/persian/institutional-37540067",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 6`] = `
{
  "text": "کوکی ها",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 7`] = `
{
  "text": "تماس با بی بی سی",
  "url": "https://www.bbc.co.uk/persian/send/u50853555",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 8`] = `
{
  "text": "سیاست ما درباره لینک دادن به سایت های دیگر.",
  "url": "https://www.bbc.com/persian/institutional/2011/04/000001_links",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/persian"`;

exports[`Canonical persian/afghanistan IDX page Footer I can see the footer copyright and external linking text 1`] = `"© 2023 بی بی سی. بی بی سی مسئول محتوای سایت های دیگر نیست. سیاست ما درباره لینک دادن به سایت های دیگر."`;

exports[`Canonical persian/afghanistan IDX page Header I can see the branding 1`] = `"BBC News, فارسی"`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 1`] = `
{
  "text": "صفحه اول",
  "url": "/persian",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 2`] = `
{
  "text": "پخش زنده",
  "url": "/persian/media-49522521",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 3`] = `
{
  "text": "ویدیو",
  "url": "/persian/topics/c6z7mnr559gt",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 4`] = `
{
  "text": "تلویزیون",
  "url": "/persian/tv-and-radio-37434377",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 5`] = `
{
  "text": "ايران",
  "url": "/persian/topics/ckdxnwvwwjnt",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 6`] = `
{
  "text": "صفحه فعلی, افغانستان",
  "url": "/persian/afghanistan",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 7`] = `
{
  "text": "جهان",
  "url": "/persian/topics/c1d8ye58xl8t",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 8`] = `
{
  "text": "هنر",
  "url": "/persian/topics/c9wpm0epm45t",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 9`] = `
{
  "text": "ورزش",
  "url": "/persian/topics/cnq6879k7yjt",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 10`] = `
{
  "text": "اقتصاد",
  "url": "/persian/topics/cl8l9mvlllqt",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 11`] = `
{
  "text": "دانش",
  "url": "/persian/topics/ckdxnwr4r1yt",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 12`] = `
{
  "text": "ناظران می‌گویند",
  "url": "/persian/blogs-54099951",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 13`] = `
{
  "text": "رادیو",
  "url": "/persian/tv-and-radio-37434376",
}
`;

exports[`Canonical persian/afghanistan IDX page Main heading should match text 1`] = `"خطا در سرور داخلی"`;

exports[`Canonical persian/afghanistan IDX page SEO Canonical link 1`] = `"http://localhost:7080/persian/afghanistan"`;

exports[`Canonical persian/afghanistan IDX page SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical persian/afghanistan IDX page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical persian/afghanistan IDX page SEO Heading level 1 1`] = `"خطا در سرور داخلی"`;

exports[`Canonical persian/afghanistan IDX page SEO Lang attribute 1`] = `"fa"`;

exports[`Canonical persian/afghanistan IDX page SEO OG description 1`] = `"تازه ترین اخبار، گزارش ها و تحلیل ها درباره افغانستان؛ از سیاست، جامعه و مسائل امنیتی افغانستان گرفته تا گزارش های ویدیویی و برنامه های رادیو بی بی سی برای افغانستان."`;

exports[`Canonical persian/afghanistan IDX page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`Canonical persian/afghanistan IDX page SEO OG image alt 1`] = `"BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO OG locale 1`] = `"fa"`;

exports[`Canonical persian/afghanistan IDX page SEO OG site name 1`] = `"BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO OG title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO OG type 1`] = `"website"`;

exports[`Canonical persian/afghanistan IDX page SEO OG url 1`] = `"http://localhost:7080/persian/afghanistan"`;

exports[`Canonical persian/afghanistan IDX page SEO Page title 1`] = `"خطا در سرور داخلی - BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO Robots meta tag 1`] = `"noindex,nofollow"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter creator 1`] = `"@bbcpersian"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter description 1`] = `"خطا در سرور داخلی"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter image alt 1`] = `"BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter site 1`] = `"@bbcpersian"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter title 1`] = `"خطا در سرور داخلی - BBC News فارسی"`;
